# NetworkDriverInsTool

./: .gitignore  Cargo.toml  README.md
nic-installer/: Cargo.toml  README.md  build.rs
nic-installer/docs/: DrvCeo-passwords-and-RE.md
nic-installer/scripts/: make-bundle.ps1
nic-installer/src/: archive.rs  db.rs  detect.rs  drvceo.rs  embedded.rs  install.rs  lib.rs  main.rs  sysinfo.rs
nzndit/: Cargo.toml  build.rs
nzndit/src/: main.rs
scripts/: build-bundles.ps1
