[workspace]
resolver = "2"
members = ["nic-installer", "nzndit"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/NicrozoftDEV/NetworkDriverInsTool"
authors = ["NicrozoftDEV"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
