[package]
name = "nzndit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NZNDIT — Nicrozoft Network Driver Install Tool (native-windows-gui)"

[[bin]]
name = "nzndit"
path = "src/main.rs"

[features]
# Bake the 360 driver catalog into the EXE (no folder needed at runtime).
embedded = ["nic-installer/embedded"]

[dependencies]
nic-installer = { path = "../nic-installer" }
native-windows-gui = { version = "1.0", features = ["high-dpi"] }
native-windows-derive = "1.0"
anyhow = "1"
# Win32 bits nwg doesn't wrap: BCM_SETSHIELD (UAC shield on the Install button)
# and ShellExecuteW "runas" (self-elevation). Same winapi nwg uses, so HWND matches.
winapi = { version = "0.3", features = ["shellapi", "winuser", "commctrl"] }

[build-dependencies]
embed-manifest = "1"
